# FileExchangeProtocol

./: CMakeLists.txt  ControlCharacter.cpp  ControlCharacter.h  FileTransferHelper.cpp  FileTransferHelper.h  MessageComposer.cpp  MessageComposer.h  MessageToConsolePrinter.cpp  MessageToConsolePrinter.h  PipeParser.cpp  PipeParser.h  ReceivingQueue.cpp  ReceivingQueue.h  SendingQueue.cpp  SendingQueue.h  main.cpp
